--- a/index.html
+++ b/index.html
@@ -121,13 +121,32 @@
             </p>
             <a href="#" class="price_button common_button"
               >Get started
-              <img src="img/price/arrow-white-right.svg" alt="arrow" class="button_arrow"
+              <img
+                src="img/price/arrow-white-right.svg"
+                alt="arrow"
+                class="button_arrow white_arrow"
             /></a>
           </div>
         </div>
       </div>
     </section>
-    <section class="featured"></section>
+    <section class="featured">
+      <div class="featured_wrapper">
+        <h3>GLP-1's have been featured in</h3>
+        <div class="featured_companies_wrapper">
+          <div class="featured_companies_3_wrap">
+            <img src="img/featured/forbes.svg" alt="forbes" class="featured_companies_company" />
+            <img src="img/featured/fox.svg" alt="fox" class="featured_companies_company" />
+            <img src="img/featured/yahoo.svg" alt="yahoo" class="featured_companies_company" />
+          </div>
+          <div class="featured_companies_3_wrap">
+            <img src="img/featured/wsj.svg" alt="wjs" class="featured_companies_company" />
+            <img src="img/featured/times.svg" alt="times" class="featured_companies_company" />
+            <img src="img/featured/nbc.svg" alt="nbc" class="featured_companies_company" />
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="begin"></section>
     <section class="sub"></section>
 
