--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
     </section>
     <section class="price" id="price">
       <div class="price_content_wrapper">
-        <h2 class="price_title">Semaglutide Injections for Weight Loss and Health</h2>
+        <h2 class="price_title" data-aos="zoom-in">
+          Semaglutide Injections for Weight Loss and Health
+        </h2>
         <div class="price_content">
-          <img src="img/price/priceimg.png" alt="image" class="price_image" />
-          <div class="price_text_content">
+          <img data-aos="fade-up" src="img/price/priceimg.png" alt="image" class="price_image" />
+          <div data-aos="fade-up" class="price_text_content">
             <p class="price_text_content_title">Semaglutide</p>
             <p class="price_text_content_description">
               Semaglutide is a medication used for weight loss that belongs to a class of drugs
@@ -137,8 +139,8 @@
     </section>
     <section class="featured">
       <div class="featured_wrapper">
-        <h3>GLP-1's have been featured in</h3>
-        <div class="featured_companies_wrapper">
+        <h3 data-aos="fade-up">GLP-1's have been featured in</h3>
+        <div data-aos="fade-up" class="featured_companies_wrapper">
           <div class="featured_companies_3_wrap">
             <img src="img/featured/forbes.svg" alt="forbes" class="featured_companies_company" />
             <img src="img/featured/fox.svg" alt="fox" class="featured_companies_company" />
@@ -154,17 +156,17 @@
     </section>
     <section class="begin" id="hiw">
       <div class="begin_wrapper">
-        <h2 class="begin_title">Begin your journey in 4 easy steps</h2>
+        <h2 class="begin_title" data-aos="fade-up">Begin your journey in 4 easy steps</h2>
         <div class="begin_content">
           <div class="begin_content_wrap_2">
-            <div class="begin_content_item">
+            <div class="begin_content_item" data-aos="fade-up" data-aos-delay="100">
               <img src="img/begin/pencil.svg" alt="pencil" class="begin_content_item_icon" />
               <p class="begin_content_item_title">Fill out "See if you qualify"</p>
               <p class="begin_content_item_subtitle">
                 Our provider will then email you a health history form to fill out
               </p>
             </div>
-            <div class="begin_content_item">
+            <div class="begin_content_item" data-aos="fade-up" data-aos-delay="300">
               <img src="img/begin/desk.svg" alt="desk" class="begin_content_item_icon" />
               <p class="begin_content_item_title">Complete Health history form</p>
               <p class="begin_content_item_subtitle">
@@ -173,14 +175,14 @@
             </div>
           </div>
           <div class="begin_content_wrap_2">
-            <div class="begin_content_item">
+            <div class="begin_content_item" data-aos="fade-up" data-aos-delay="500">
               <img src="img/begin/quote.svg" alt="quote" class="begin_content_item_icon" />
               <p class="begin_content_item_title">Meet with online medical provider</p>
               <p class="begin_content_item_subtitle">
                 A licensed provider with weight loss experience will review your information
               </p>
             </div>
-            <div class="begin_content_item">
+            <div class="begin_content_item" data-aos="fade-up" data-aos-delay="700">
               <img src="img/begin/can.svg" alt="" class="begin_content_item_icon" />
               <p class="begin_content_item_title wrap">Receive medication</p>
               <p class="begin_content_item_subtitle">Free shipping directly to your door</p>
@@ -191,8 +193,8 @@
     </section>
     <section class="sub" id="sub">
       <div class="form_wrapper">
-        <p class="sub_form_title">See if you qualify</p>
-        <p class="sub_form_subtitle">
+        <p class="sub_form_title" data-aos="fade-up">See if you qualify</p>
+        <p class="sub_form_subtitle" data-aos="fade-up">
           Fill out the information below and you will receive a short health history form to fill
           out online to see if you qualify.
         </p>
@@ -244,13 +246,13 @@
           />
         </form>
       </div>
-      <img src="img/sub/submain.png" alt="girl" class="sub_image sub_desk" />
-      <img src="img/sub/sub_mob.png" alt="girl" class="sub_image sub_mob" />
+      <img data-aos="fade-up" src="img/sub/submain.png" alt="girl" class="sub_image sub_desk" />
+      <img data-aos="fade-up" src="img/sub/sub_mob.png" alt="girl" class="sub_image sub_mob" />
     </section>
     <section class="reviews" id="reviews">
       <div class="reviews_wrapper">
-        <h2 class="reviews_title">Triumph Stories</h2>
-        <div class="reviews_slider">
+        <h2 class="reviews_title" data-aos="fade-up">Triumph Stories</h2>
+        <div class="reviews_slider" data-aos="fade-up">
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
