--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Slider-swiper -->
     <title>Purelivity Wellness - Weight Loss Therapy</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="" />
+    <link rel="icon" type="image/x-icon" href="img/global/favicon.jpg" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
