--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><p class="nav_elem" href="#" onclick="scrollToHIW()">How it works</p></li>
             <li><p class="nav_elem" href="#" onclick="scrollToReviews()">Triumph Stories</p></li>
             <li>
-              <a class="nav_elem" href="tel:18324604030">(1-832-460-4030)</a>
+              <a class="nav_elem" href="tel:+18324604030">(1-832-460-4030)</a>
             </li>
           </ul>
 
@@ -69,7 +69,7 @@
                 <p class="nav_elem_mobile" href="" onclick="scrollToReviews()">Triumph Stories</p>
               </li>
               <li>
-                <a class="nav_elem_mobile phone_push" href="tel:18324604030">(1-832-460-4030)</a>
+                <a class="nav_elem_mobile phone_push" href="tel:+18324604030">(1-832-460-4030)</a>
               </li>
               <a class="price_button common_button" onclick="scrollToSub()"
                 >Get started
@@ -691,7 +691,7 @@
             </p>
           </div>
           <div class="phone_mail_wrapper">
-            <a href="tel:18324604030" class="footer_text footer_phone">(1-832-460-4030)</a>
+            <a href="tel:+18324604030" class="footer_text footer_phone">(1-832-460-4030)</a>
           </div>
 
           <div class="phone_mail_wrapper">
