--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
               <div class="swiper-slide">
                 <div class="slide_content">
                   <p class="slide_content_quote">
-                    "I'm thrilled with the results Semaglutide from Purelivity has brought to my
-                    health. The transformation is incredible, and I feel fantastic!"
+                    "I'm thrilled with the results that Semaglutide from Purelivity has brought to
+                    my health. The transformation is incredible, and I feel fantastic!"
                   </p>
                   <p class="slide_content_name">Alice N.</p>
                 </div>
