--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <a href="index.html" class="logo_wrapper"> Purelivity Wellness </a>
 
           <ul class="navbar_menu">
-            <li><p class="nav_elem" href="" onclick="scrollToPrice()">Price</p></li>
-            <li><p class="nav_elem" href="#" onclick="scrollToPrice()">About</p></li>
-            <li><p class="nav_elem" href="#" onclick="scrollToHIW()">How it works</p></li>
-            <li><p class="nav_elem" href="#" onclick="scrollToReviews()">Triumph Stories</p></li>
+            <li><p class="nav_elem" onclick="scrollToPrice()">Price</p></li>
+            <li><p class="nav_elem" onclick="scrollToPrice()">About</p></li>
+            <li><p class="nav_elem" onclick="scrollToHIW()">How it works</p></li>
+            <li><p class="nav_elem" onclick="scrollToReviews()">Triumph Stories</p></li>
             <li>
               <a class="nav_elem" href="tel:+18324604030">(1-832-460-4030)</a>
             </li>
@@ -57,28 +57,28 @@
         <div class="popup" id="popup">
           <div class="popup_textblock" id="popupSlide">
             <ul class="navbar_menu_mobile">
-              <li><p class="nav_elem_mobile" href="" onclick="scrollToPrice()">Price</p></li>
+              <li><p class="nav_elem_mobile" onclick="scrollToPrice()">Price</p></li>
               <li>
-                <p class="nav_elem_mobile" href="" onclick="scrollToPrice()">About</p>
+                <p class="nav_elem_mobile" onclick="scrollToPrice()">About</p>
               </li>
 
               <li>
-                <p class="nav_elem_mobile" href="" onclick="scrollToHIW()">How it works</p>
+                <p class="nav_elem_mobile" onclick="scrollToHIW()">How it works</p>
               </li>
               <li>
-                <p class="nav_elem_mobile" href="" onclick="scrollToReviews()">Triumph Stories</p>
+                <p class="nav_elem_mobile" onclick="scrollToReviews()">Triumph Stories</p>
               </li>
               <li>
                 <a class="nav_elem_mobile phone_push" href="tel:+18324604030">(1-832-460-4030)</a>
               </li>
-              <a class="price_button common_button" onclick="scrollToSub()"
-                >Get started
-                <img
-                  src="img/price/arrow-white-right.svg"
-                  alt="arrow"
-                  class="button_arrow white_arrow"
-              /></a>
             </ul>
+            <a class="price_button common_button" onclick="scrollToSub()"
+              >Get started
+              <img
+                src="img/price/arrow-white-right.svg"
+                alt="arrow"
+                class="button_arrow white_arrow"
+            /></a>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
             </div>
             <a class="main_textside_button common_button" onclick="scrollToSub()"
               >Get started
-              <img src="img/main/arrow-right.svg" alt="" class="button_arrow main_but_arrow"
+              <img src="img/main/arrow-right.svg" alt="arrow" class="button_arrow main_but_arrow"
             /></a>
           </div>
         </div>
@@ -183,7 +183,7 @@
               </p>
             </div>
             <div class="begin_content_item" data-aos="fade-up" data-aos-delay="700">
-              <img src="img/begin/can.svg" alt="" class="begin_content_item_icon" />
+              <img src="img/begin/can.svg" alt="can" class="begin_content_item_icon" />
               <p class="begin_content_item_title wrap">Receive medication</p>
               <p class="begin_content_item_subtitle">Free shipping directly to your door</p>
             </div>
