--- a/index.html
+++ b/index.html
@@ -1,6 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-KCR5VXG4');
+    </script>
+    <!-- End Google Tag Manager -->
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = '2.0';
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '360515053226752');
+      fbq('track', 'PageView');
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=360515053226752&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
+    <meta name="facebook-domain-verification" content="ccuxny6nsnr7pmxhfgz3luic1x1iy5" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,6 +75,16 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KCR5VXG4"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="header">
       <div class="header_wrapper mycontainer">
         <nav class="navbar">
@@ -42,7 +96,7 @@
             <li><p class="nav_elem" onclick="scrollToHIW()">How it works</p></li>
             <li><p class="nav_elem" onclick="scrollToReviews()">Triumph Stories</p></li>
             <li>
-              <a class="nav_elem" href="tel:+18324604030">(1-832-460-4030)</a>
+              <a class="nav_elem" href="tel:+18324604030">832-460-4030</a>
             </li>
           </ul>
 
@@ -69,7 +123,7 @@
                 <p class="nav_elem_mobile" onclick="scrollToReviews()">Triumph Stories</p>
               </li>
               <li>
-                <a class="nav_elem_mobile phone_push" href="tel:+18324604030">(1-832-460-4030)</a>
+                <a class="nav_elem_mobile phone_push" href="tel:+18324604030">832-460-4030</a>
               </li>
             </ul>
             <a class="price_button common_button" onclick="scrollToSub()"
@@ -198,7 +252,7 @@
           Fill out the information below and you will receive a short health history form to fill
           out online to see if you qualify.
         </p>
-        <form action="https://postmail.invotes.com/send" method="post" id="email_form">
+        <form id="javascript_form">
           <div class="input-container hiden" data-aos="fade-up" data-aos-duration="800">
             <input type="text" type="hidden" name="Subject" value="New Customer from website" />
           </div>
@@ -241,27 +295,15 @@
             </div>
           </div>
           <div class="input-container">
-            <input id="submit_form" type="submit" value="Submit" class="form_button" />
+            <input id="js_send" type="submit" value="Submit" class="form_button" />
           </div>
-          <input type="hidden" name="access_token" value="fi2138nc5t3t25unwm7thdou" />
-
-          <input type="hidden" name="success_url" value=".thankyou.html" />
-          <input
-            type="hidden"
-            name="error_url"
-            value=".?message=Email+could+not+be+sent.&isError=1"
-          />
         </form>
-        <script>
-          var submitButton = document.getElementById('submit_form');
-          var form = document.getElementById('email_form');
-          form.addEventListener('submit', function (e) {
-            setTimeout(function () {
-              submitButton.value = 'Sending...';
-              submitButton.disabled = true;
-            }, 1);
-          });
-        </script>
+        <form action="thankyou.php" method="post" id="form_post">
+          <input type="hidden" class="text_fields name2" name="name2" />
+          <input type="hidden" class="text_fields surname2" name="surname2" />
+          <input type="hidden" class="text_fields tel2" name="tel2" />
+          <input type="hidden" class="text_fields email2" name="email2" />
+        </form>
       </div>
       <img data-aos="fade-up" src="img/sub/submain.png" alt="girl" class="sub_image sub_desk" />
       <img data-aos="fade-up" src="img/sub/sub_mob.png" alt="girl" class="sub_image sub_mob" />
@@ -691,7 +733,7 @@
             </p>
           </div>
           <div class="phone_mail_wrapper">
-            <a href="tel:+18324604030" class="footer_text footer_phone">(1-832-460-4030)</a>
+            <a href="tel:+18324604030" class="footer_text footer_phone">832-460-4030</a>
           </div>
 
           <div class="phone_mail_wrapper">
